--- a/docs/todo.txt
+++ b/docs/todo.txt
@@ -100,6 +100,7 @@ X Add thousands sep for counts in analytics (info, home, tags, user)
 - Stemming of tags
   - Tag aliases
   - Tag rollup (aggregrate tags)
+! Delete comment from user page (including shared)
   
 ------------------------------------------------------------
         PLATFORMS, SYNDICATION, IMPORT/EXPORT
