--- a/wiki/API.wiki
+++ b/wiki/API.wiki
@@ -25,9 +25,9 @@ Any request which writes data to the server additionally needs to supply an apik
 http://go2.me/...?callback=MyCallback&apikey=api~test~1~2009-12-31~44C09D058D6431E010734A8550D012B1435C2474
 }}}
 
-Note, the key shown expires on Dec 31, 2009, and is limited to one request per minute.  It may be used for limited testing. If you want to use the Go2.me api, please send mail to apikey at go2.me.
+Note, the key shown expires on Dec 31, 2009, and is limited to one request per minute.  It may be used for limited testing. If you want to use the Go2.me api from a server applications, please send mail to apikey at go2.me.
 
-You can also use the init
+Client-side API keys can be retrieved from Go2.me through the _init_ command (see below).  These keys allow up to 10 requests per minute but must originate from the same IP address that requested the key.
 
 == Concepts ==
 
@@ -114,7 +114,14 @@ http://go2.me/init/?callback=Test
 
 Results:
 {{{
+Test({
+    "status": "OK", 
+    "secsResponse": "0.15", 
+    "apikey": "apiIP~64.81.170.252~10~3E6C1CCBEF9F30B9815E19D2C9D7E49C4973B8DC"
+});
 }}}
+
+This client apikey can be used from current machine (same IP address) and allows up to 10 requests per minute from the client.
 
 http://go2.me/cmd/setusername?username=test&callback=Test
 
