--- a/trunk/docs/todo.txt
+++ b/trunk/docs/todo.txt
@@ -186,22 +186,33 @@ X Add thousands sep for counts in analytics (info, home, tags, user)
 - Clip long user names under image
 - Replace default user image
 - clip long URL's in map title bar
-! Clean up comment form
-! AJAX comments
+X Clean up comment form
+X AJAX comments
 - Focus should be in comment on mapped page
 - don't allow digit to begin a username (e.g. "4:46 comment")\
 - update times in chat window in real time
 - Presence information displayed
 	- push Geo information from Google API to display with presence
-- Favorite link
-- User subscriptions
+5 Favorite link
+4 User subscriptions
   - Add users to active subscribers on comment or favorite
   - Change activity page to show subscriptions instead of maps
   	- Group my anchor link
   - Allow un-subscribe (by user) from his own activity page
 - Trim Titles before storage
 - Unit test Age
-- allow numeric domains xxx.xxx.xxx.xxx
+- Unit test JScript Urlize()
+X allow numeric domains xxx.xxx.xxx.xxx
+X <script> bug in JSON in page!
+1 ping
+0 time sync bugs (future dates)
+2 pressence
+6 favicon
+3 Private scope for comments
+7 Table formatting
+8 Support @user replies in comments -> auto-subscribe AND hyperlink
+9 Fix problems with user case different (links, login, etc.)
+
   
 ------------------------------------------------------------
         PLATFORMS, SYNDICATION, IMPORT/EXPORT
