--- a/docs/todo.txt
+++ b/docs/todo.txt
@@ -212,6 +212,8 @@ X <script> bug in JSON in page!
 7 Table formatting
 8 Support @user replies in comments -> auto-subscribe AND hyperlink
 9 Fix problems with user case different (links, login, etc.)
+10 Signin/signout bugs - esp with protected pages
+- Isn't csrf supposed to be a signed value (non-forgable)?
 
   
 ------------------------------------------------------------
