--- a/trunk/docs/todo.txt
+++ b/trunk/docs/todo.txt
@@ -207,20 +207,26 @@ X <script> bug in JSON in page!
 X ping - backoff activity
   X honor since parameter
 X time sync bugs (future dates)
-2 pressence
-6 favicon
-3 Private scope for comments - filter
-7 Table formatting
-8 Support @user replies in comments -> auto-subscribe AND hyperlink
+! presence
+  - merge updates
+  - User state (active/idle/typing)
+! favicon
+! Private scope for comments - filter
+! Table formatting
+- Support @user replies in comments -> auto-subscribe AND hyperlink
 9 Fix problems with user case different (links, login, etc.)
 10 Signin/signout bugs - esp with protected pages
 - Isn't csrf supposed to be a signed value (non-forgable)?
-- Fix bugs in share/view/comment counts
+! Fix bugs in share/view/comment counts
 - Replace meta analytics with eventtracking (new) calls
 - Document the Lookup API
 - Delete comments broken - need to remove comment from local as well as server
-- Allow intranet domains
+! Allow intranet domains (no periods)
 - quota should not be affected by failed requests (10 rpm)
+! Favorite (star)
+! Test in IE and Chrome
+! update stats of page via AJAX (visitors count)
+! notify server when leaving page
   
 ------------------------------------------------------------
         PLATFORMS, SYNDICATION, IMPORT/EXPORT
